--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="style.css">
     <title>Programa Calculo Matriz</title>
 </head>
-<body>
-    <div class="warp">
-        <h1 class="titulo">Ingrese Un Numero Impar Para Definir Tamaño De La Matriz</h1>
+<body class="fondo">
+    <div class="warp" >
+
+        <h1 class="titulo">Para Calcular Suma De Diagonales en la Matriz</h1>
+        <h1 class="titulo">Ingrese Un Numero Impar Que Represente Su Tamaño</h1>
         <form class="formulario"  action=""  >
             <input type="number" step="2" min="3" id="valueinput" aria-label="3">
             <input type="button"  class="button" id="botonCalcular" value="Calcular" onchange="" >
